# N3LDGClassifier-GPU

./: CMakeLists.txt  README.md  command.txt  log  log.checkgrad2  log.checkgrad3  main.cpp  run.sh
Debug/: NNCNNLabeler.ilk
core/: BaseParam.h  BucketOP.h  CheckGrad.h  Concat.h  Graph.h  LookupTable.h  ModelUpdate.h  N3LDG.h  Node.h  Param.h  Pooling.h  SoftMaxLoss.h  SparseParam.h  UniOP.h
data/phone_data/: option.debug  phone_dev.txt.debug  phone_test.txt.debug  phone_train.txt.debug
matrix/: CMakeLists.txt
matrix/cnmem/: CMakeLists.txt
matrix/include/: cpu_matrix.h  functors.h  gpu_matrix.h
matrix/src/: .gpu_matrix.cu.swp  cpu_matrix.cc  gpu_matrix.cu
run/: log-cpu  log-cpu-10  log-gpu  log-gpu-10  log-gpu-100  run.sh  time-cpu  time-gpu
run-x-compute/: log-computer-10-cpu  log-computer-10-gpu  log-no-computer-10  log-no-computer-10-gpu  nohup.out
src/: CMakeLists.txt
src/NNCNNLabeler/: CMakeLists.txt  NNCNNLabeler.cpp
src/NNCNNLabeler/model/: ComputionGraph.h  Driver.h  ModelParams.h
